# genshin-gacha-export-rs

./: Cargo.toml  README.md
src/: main.rs
