[package]
name = "genshin-gacha-export"
version = "0.1.0"
authors = ["cirno"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
xlsxwriter = "0.3.2"
chrono = "0.4"